Avoid flickering while dragging

--- a/packages/x-scheduler/src/joy/month-view/MonthView.css
+++ b/packages/x-scheduler/src/joy/month-view/MonthView.css
@@ -111,6 +111,7 @@
   font-size: var(--font-size-1);
   line-height: var(--line-height-1);
   padding-inline-start: var(--space-1);
+  padding-block: var(--space-1);
 }
 
 .MonthViewCellNumberButton {
